[package]
name = "watcher"
version = "0.1.0"
authors = ["iwot <iwmt@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard-win = "2.2.0"
warp = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
